k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedantic-orderliness-${ENV}
  labels:
    app: pedantc-orderliness
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pedantic-orderliness
      env: ${ENV}
  template:
    metadata:
      labels:
        app: pedantic-orderliness
        env: ${ENV}
    spec:
      containers:
      - name: pedantic-orderliness
        image: docker.pedanticorderliness.com/pedantic:${TAG_NAME}
        ports:
        - containerPort: 8081
      imagePullSecrets:
        - name: regcred
