k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedantic-orderliness-${ENV}-service
  namespace: pedantic-orderliness-${ENV}
spec:
  selector:
    app: pedantic-orderliness
    env: ${ENV}
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
