k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedantic-orderliness-${ENV}-ingress
  namespace: pedantic-orderliness-${ENV}
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${ENV}.pedanticorderliness.com
      secretName: pedantic-orderliness-${ENV}-tls
  rules:
    - host: ${ENV}.pedanticorderliness.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pedantic-orderliness-${ENV}-service
                port:
                  number: 80
